fix(transformation-detail): don't use tables for queries list - the text won't wrap; use layout instead. fixes #148

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -104,6 +104,16 @@ svg.kb-graph  {
   cursor: pointer;
 }
 
+.kbc-main-content .vertical-center {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+}
+
+.kbc-main-content .stripe-odd {
+  background-color: #f9f9f9
+}
+
 .kbc-main-content .cm-s-solarized.CodeMirror {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -116,7 +126,6 @@ svg.kb-graph  {
 
 .kbc-main-content .edit .CodeMirror {
   min-height: 100px;
-
 }
 
 .kbc-main-content .static .CodeMirror-cursor {
